--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,14 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "autoprefixer": "^10.4.20",
+    "joi": "^17.13.3",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
