--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.20",
     "firebase": "^10.13.2",
     "joi": "^17.13.3",
