--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.20",
     "firebase": "^10.13.2",
     "joi": "^17.13.3",
+    "lucide-react": "^0.446.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
